--- a/static/src/style.scss
+++ b/static/src/style.scss
@@ -246,7 +246,7 @@
 }
 
 .label-title-text {
-  width: calc(100% - 45px);
+  width: calc(100% - 85px);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -254,6 +254,13 @@
 }
 
 .label-link {
+  float: right;
+}
+
+.label-negate-button {
+  float: right;
+}
+.label-accept-button {
   float: right;
 }
 
