--- a/static/src/style.scss
+++ b/static/src/style.scss
@@ -287,6 +287,11 @@ input[type=submit] {
   font-size: 15px;
   padding: 10px;
   margin-top: 20px;
+  cursor: pointer;
+}
+
+.file-item:hover {
+  background-color: lightgray;
 }
 
 .label-display {
